--- a/components/ssd1306/CMakeLists.txt
+++ b/components/ssd1306/CMakeLists.txt
@@ -1,4 +1,6 @@
-set(COMPONENT_SRCS main.c ssd1306.c ssd1306_i2c.c ssd1306_spi.c)
-set(COMPONENT_ADD_INCLUDEDIRS ".")
-
-register_component()
+idf_component_register(SRCS "ssd1306_main.c"
+                    "ssd1306.c"
+                    "ssd1306_i2c.c"
+                    "ssd1306_spi.c"
+                    INCLUDE_DIRS .
+                    REQUIRES console spi_flash)
