--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -5,6 +5,7 @@ idf_component_register(SRCS "esp32_nat_router.c"
                             "ledc/ledc_main.c"
                             "gpio5_relay/gpio5_relay.c"
                             "dht11/dht11_main.c"
+                            "mqtt/mqtt_main.c"
                             
                         INCLUDE_DIRS "include"
                         INCLUDE_DIRS ".")
